feat: add test start shell